--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
       <section class="informacion-adicional achicar">
         <p>© 2024 - Desarrollado por Martin Carrizo.</p>
         <section class="redes-sociales achicar">
-          <i class="bi bi-instagram"></i>
-          <i class="bi bi-github"></i>
-          <i class="bi bi-linkedin"></i>
+          <i class="bi bi-instagram"><a href="https://www.instagram.com/"></a></i>
+          <i class="bi bi-github"><a href="https://github.com/Martin-Carrizo-dev"></a></i>
+          <i class="bi bi-linkedin"><a href="https://www.linkedin.com/in/martin-carrizo-aa3437264/"></a></i>
         </section>
         <p class="achicar">facebookmartincarrizo09@gmail.com</p>
       </section>
