--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
   </head>
   <body>
     <header>
-        <nav class="navbar">
-          <h1 class="logo">M.</h1>
-          <div class="menu">
-            <a href="">Inicio</a>
-            <a href="">Sobre Mí</a>
-            <a href="">Servicios</a>
-            <a href="">Skills</a>
-            <a href="">Conversemos</a>
-          </div>
-          <i class="bi bi-list menu-icon lista-blanca"></i>
-        </nav>
-      </header>
+      <nav class="navbar">
+        <h1 class="logo">M.</h1>
+        <div class="menu">
+          <a href="">Inicio</a>
+          <a href="">Sobre Mí</a>
+          <a href="">Servicios</a>
+          <a href="">Skills</a>
+          <a href="">Conversemos</a>
+        </div>
+        <i class="bi bi-list menu-icon lista-blanca"></i>
+      </nav>
+    </header>
 
     <main>
       <!-- Inicio del hero -->
@@ -200,9 +200,17 @@
       <section class="informacion-adicional achicar">
         <p>© 2024 - Desarrollado por Martin Carrizo.</p>
         <section class="redes-sociales achicar">
-          <a href="https://www.instagram.com/" class="a1-footer"><i class="bi bi-instagram"></i></a>
-          <a href="https://github.com/Martin-Carrizo-dev" class="a1-footer"><i class="bi bi-github"></i></a>
-          <a href="https://www.linkedin.com/in/martin-carrizo-aa3437264/" class="a1-footer"><i class="bi bi-linkedin"></i></a>
+          <a
+            href="https://www.linkedin.com/in/martin-carrizo-aa3437264/"
+            class="a1-footer"
+            ><i class="bi bi-linkedin"></i
+          ></a>
+          <a href="https://www.instagram.com/" class="a1-footer"
+            ><i class="bi bi-instagram"></i
+          ></a>
+          <a href="https://github.com/Martin-Carrizo-dev" class="a1-footer"
+            ><i class="bi bi-github"></i
+          ></a>
         </section>
         <p class="achicar">facebookmartincarrizo09@gmail.com</p>
       </section>
